# Homeplate

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  constants.py
app/clients/: disk_cache.py  mlb_client.py  mlb_news_client.py
app/routes/: images.py  landing.py  leaderboards.py  player.py  standings.py  team.py
app/services/: calculations.py  image_cache.py  leaders.py  news.py  player.py  standings.py  team.py
app/static/css/: style.css
app/templates/: 404.html  500.html  base.html  landing.html  leaderboards.html  player.html  standings.html  team.html
scripts/: bootstrap.sh  run_dev.sh  run_tests.sh
tests/: conftest.py  test_calculations.py  test_leaders_service.py  test_mlb_client.py  test_mlb_news_client.py  test_news_service.py  test_player_service.py  test_standings_service.py  test_team_service.py
