[project]
name = "homebase"
version = "0.1.0"
description = "MLB Team and Player Stats Application"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "requests",
    "cachetools",
]

[dependency-groups]
dev = ["pytest", "ruff", "pre-commit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
